<resources>
    <string name="app_name">Jokenpo</string>
    <string name="you">YOU</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="start_game">Start Game</string>
    <string name="name">Name...</string>
    <string name="exit">Exit</string>
    <string name="about">About</string>
    <string name="new_game">New Game</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
