<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.PlayerFragment"
        android:background="@color/colorBackground">
    <ImageView
            android:src="@mipmap/player_title_ico"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" android:contentDescription="TODO"
            android:scaleType="centerCrop"/>
    <TextView
            android:text="@string/enter_your_name"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:textSize="@dimen/main_subtitle_font_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            android:layout_marginTop="76dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:layout_marginStart="40dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="40dp" app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            style="@style/input_wizard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/name"
            android:ems="10"
            android:id="@+id/playerEditText"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="@+id/textView3" app:layout_constraintEnd_toEndOf="@+id/textView3"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:autofillHints=""/>
    <Button
            android:text="@string/start_game"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/startGameButton"
            android:background="@color/colorPrimary"
            android:textColor="#FFF"
            app:layout_constraintStart_toStartOf="@+id/playerEditText"
            app:layout_constraintEnd_toEndOf="@+id/playerEditText"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/playerEditText" android:layout_marginBottom="180dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>

</androidx.constraintlayout.widget.ConstraintLayout>