<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@color/colorBackground">
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@mipmap/home_ico" android:id="@+id/imageButton2"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp" android:contentDescription="TODO" android:background="#00FFFFFF"/>
    <Button
            android:text="@string/new_game"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/newGameButton"
            android:layout_marginTop="100dp"
            android:background="@color/colorPrimary"
            android:textColor="#FFF"
            app:layout_constraintTop_toBottomOf="@+id/imageButton2"
            app:layout_constraintStart_toStartOf="@+id/imageButton2"
            app:layout_constraintEnd_toEndOf="@+id/imageButton2"/>
    <TextView
            android:text="@string/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/aboutButton"
            android:layout_marginTop="30dp"
            android:textColor="@color/colorSecondary"
            app:layout_constraintTop_toBottomOf="@+id/newGameButton" app:layout_constraintStart_toStartOf="@+id/newGameButton"
            app:layout_constraintEnd_toEndOf="@+id/newGameButton" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/exitButton" app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/exitButton"
            android:layout_marginBottom="20dp"
            android:textColor="@color/colorSecondary"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="@+id/aboutButton"
            app:layout_constraintEnd_toEndOf="@+id/aboutButton"/>

    <FrameLayout android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:id="@+id/containerMain"
                 app:layout_constraintTop_toBottomOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:paddingBottom="32dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>